--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "vue-resource": "^1.0.3",
     "vue-router": "^2.0.1",
     "vue-style-loader": "^1.0.0",
+    "vuex": "^2.0.0",
     "webpack": "^1.13.2",
     "webpack-dev-middleware": "^1.8.3",
     "webpack-hot-middleware": "^2.12.2",
