--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "build": "node build/build.js"
   },
   "dependencies": {
-    "element-ui": "^1.0.0-rc.7",
-    "vue": "^2.0.1"
+    "element-ui": "1.0.0-rc.6",
+    "vue": "^2.0.3"
   },
   "devDependencies": {
     "autoprefixer": "^6.4.0",
