--- a/package.json
+++ b/package.json
@@ -1,16 +1,17 @@
 {
-  "name": "my-project",
+  "name": "houtai",
   "version": "1.0.0",
-  "description": "A Vue.js project",
-  "author": "peng",
+  "description": "企后台关管理系统开发",
+  "author": "peng <1024371442@qq.com>",
   "private": true,
   "scripts": {
     "dev": "node build/dev-server.js",
     "build": "node build/build.js"
   },
   "dependencies": {
-    "element-ui": "1.0.0-rc.6",
-    "vue": "^2.0.3"
+    "element-ui": "^1.0.9",
+    "vue": "^2.1.0",
+    "lodash.debounce": "^4.0.8"
   },
   "devDependencies": {
     "autoprefixer": "^6.4.0",
@@ -20,6 +21,7 @@
     "babel-preset-es2015": "^6.0.0",
     "babel-preset-stage-2": "^6.0.0",
     "babel-register": "^6.0.0",
+    "chalk": "^1.1.3",
     "connect-history-api-fallback": "^1.1.0",
     "css-loader": "^0.25.0",
     "eventsource-polyfill": "^0.9.6",
@@ -33,16 +35,22 @@
     "json-loader": "^0.5.4",
     "opn": "^4.0.2",
     "ora": "^0.3.0",
+    "semver": "^5.3.0",
     "shelljs": "^0.7.4",
     "url-loader": "^0.5.7",
-    "vue-loader": "^9.4.0",
+    "vue-loader": "^10.0.0",
     "vue-resource": "^1.0.3",
-    "vue-router": "^2.0.1",
+    "vue-router": "^2.1.1",
     "vue-style-loader": "^1.0.0",
-    "vuex": "^2.0.0",
+    "vue-template-compiler": "^2.1.0",
+    "vuex": "^2.1.1",
     "webpack": "^1.13.2",
     "webpack-dev-middleware": "^1.8.3",
     "webpack-hot-middleware": "^2.12.2",
     "webpack-merge": "^0.14.1"
+  },
+  "engines": {
+    "node": ">= 4.0.0",
+    "npm": ">= 3.0.0"
   }
 }
