--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "houtai",
   "version": "1.0.0",
-  "description": "企后台关管理系统开发",
+  "description": "后台关管理系统",
   "author": "peng <1024371442@qq.com>",
   "private": false,
   "scripts": {
@@ -21,7 +21,6 @@
     "babel-preset-es2015": "^6.0.0",
     "babel-preset-stage-2": "^6.0.0",
     "babel-register": "^6.0.0",
-
     "chalk": "^1.1.3",
     "connect-history-api-fallback": "^1.1.0",
     "css-loader": "^0.25.0",
@@ -49,10 +48,9 @@
     "webpack-dev-middleware": "^1.8.3",
     "webpack-hot-middleware": "^2.12.2",
     "webpack-merge": "^0.14.1"
-
   },
   "engines": {
-    "node": ">= 6.9.2",
-    "npm": ">= 3.10.9"
+    "node": ">= 6.10.0",
+    "npm": ">= 3.10.10"
   }
 }
